src/styles.css
.cryptogramContainer {
  display: flex;
  align-items: center;
  flex-direction: column;
  margin: 0 0 80px 0;
}

.header {
  text-align: center;
}

.flexRow {
  flex-direction: row;
  display: flex;
}

.fixedWidth {
  width: 80%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}

.letterContainer {
  margin-right: 2px;
  display: flex;
  flex-direction: column;
}

.hasLetter {
  background-color: mediumorchid;
}

.whiteText {
  color: white;
}

.blackText {
  color: black;
}

.outerLetter {
  display: flex;
  height: 50px;
  align-items: center;
  justify-content: center;
}

.guess {
  display: flex;
  height: 50px;
  min-width: 50px;
  align-items: center;
  justify-content: center;
}

.punctuation {
  margin-top: 50px;
}

.nonPunctuation {
  border-bottom-style: solid;
}

.alphaContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 80px 4px 0 4px;
  height: 35px;
  width: 60px;
}

.isUsed {
  color: lightslategrey;
}

.letterTileText {
  font-size: 60px;
  font-weight: 800;
}

.selected {
  font-size: 75px;
  text-align: center;
}

.flexColumn {
  display: flex;
  flex-direction: column;
  text-align: center;
}

.clearButton {
  margin-top: 30px;
}

